--- a/index.html
+++ b/index.html
@@ -184,11 +184,12 @@
                     <td></td>
                     <td>운영 대학 검색 팝업</td>
                     <td>UI_ADHPAbP06</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/08_UI_ADHPAbP06.html" target="_blank">PC</a>
-                        <a href="./mobile/08_UI_ADHPAbP06.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/08_UI_ADHPAbP06.html" target="_blank">MO</a>
+                        <a href="./mobile/08_UI_ADHPAbP06_searchpop.html" target="_blank">MO-Pop</a>
                     </td>
                 </tr>
                 <tr>
@@ -232,11 +233,11 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록(검색결과)</td>
                     <td>UI_ADHPAbP09</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/11_UI_ADHPAbP09.html" target="_blank">PC</a>
-                        <a href="./mobile/11_UI_ADHPAbP09.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/11_UI_ADHPAbP09.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
