--- a/index_univ.html
+++ b/index_univ.html
@@ -843,6 +843,22 @@
                         <a href="./mobile/UI_ADHPChS08.html" target="_blank">Mo</a>
                     </td>
                 </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>개인정보 수집·이용·제공에 대한 동의서(참여자용)</td>
+                    <td>UI_ADHPChS08</td>
+                    <td class="status">완료</td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCbP11.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbP11.html" target="_blank">Mo</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </body>
